--- a/src/URLS.Api/appsettings.json
+++ b/src/URLS.Api/appsettings.json
@@ -2,11 +2,31 @@
     "ConnectionStrings": {
         "Postgres": "[PLACEHOLDER]"
     },
-    "Logging": {
-        "LogLevel": {
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console" ],
+        "MinimumLevel": {
             "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning",
+                "Microsoft.EntityFrameworkCore": "Information"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Async",
+                "Args": {
+                    "configure": [
+                        {
+                            "Name": "Console",
+                            "Args": {
+                                "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact"
+                            }
+                        }
+                    ]
+                }
+            }
+        ]
     },
     "AllowedHosts": "*"
 }
